Retry Maven module options with newer JDK