@@ -27,6 +27,8 @@ public class BuildCompatibilityTest {
                 BuildFailureReason.classify(
                         "AuditListener has been compiled by a more recent version of the Java Runtime "
                                 + "(class file version 55.0)", false, false));
+        assertEquals(BuildFailureReason.BUILD_FAILED_JDK_UNAVAILABLE,
+                BuildFailureReason.classify("Unrecognized option: --add-opens=java.base/java.lang", false, false));
         assertEquals(BuildFailureReason.BUILD_FAILED_ANDROID_SDK_UNAVAILABLE,
                 BuildFailureReason.classify("SDK location not found", false, false));
         assertEquals(BuildFailureReason.BUILD_FAILED_AUTHENTICATION_REQUIRED,
