@@ -63,6 +63,8 @@ public class BuildJavaSelectionTest {
         assertEquals(11, ProjectAnalyzer.requiredJavaVersion(
                 "AuditListener has been compiled by a more recent version of the Java Runtime "
                         + "(class file version 55.0), this runtime recognizes versions up to 52.0"));
+        assertEquals(11, ProjectAnalyzer.requiredJavaVersion(
+                "Unrecognized option: --add-opens=java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED"));
         assertEquals(17, ProjectAnalyzer.requiredJavaVersion("Gradle requires JVM 17 or later to run"));
         assertEquals(6, ProjectAnalyzer.requiredJavaVersion("Source option 6 is no longer supported"));
         assertEquals(-1, ProjectAnalyzer.requiredJavaVersion("ordinary compilation failure"));
